fix: overflow text all pages

--- a/css/404.css
+++ b/css/404.css
@@ -9,6 +9,9 @@
    font-family: "Bebas Neue";
    font-size: 300px;
    font-weight: 400;
+   max-width: 360px;
+   max-height: 350px;
+   overflow: hidden;
 }
 .not-found__subtitle {
    color: rgb(41, 45, 51);
